style.css
body {
    min-height: 95vH;
    height: 100vH;
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 500px;
    margin: 0 auto;
    font-family: 'Lemon Milk', Poppins, Helvetica, Roboto, sans-serif;
}
.calculator {
    display: flex;
    flex-direction: column;
    border: 1px solid black;
    border-radius: 10px;
    padding: 10px;
    justify-content: center;
    align-items: center;
    gap: 10px;
    background-color: #e03bd3;
    color: white;
    font-size: 1.25rem;
    box-shadow: 2px 2px 4px rgba(0,0,0,.5);
}
.buttonGrid {
    display: grid;
    grid-template-columns : repeat(4, 1fr);
    grid-template-rows : repeat(5, 1fr);
    gap: 5px;
    padding: 5px;
}
.display {
    background: rgb(0, 0, 0);
    align-self: stretch;
    text-align: right;
    padding: 10px;
    border-radius: 10px;
    font-size: 1.5rem;
    color: white;
}
button {
    border-radius: 5px;
    height: 50px;
    width: 50px;
    background-color: #494646;
    color: white;
    font-size: 1.25rem;
    border-style: auto;
    transition-duration: 0.1s;
    box-shadow: 2px 4px rgba(0,0,0,.5);
}
button:hover {
    filter: brightness(1.2);
}
button:active {
    filter: brightness(.8);
    box-shadow: 1px 2px rgba(0,0,0,0);
    transform: translateY(2px);
}
.number, .decimal {
    background-color: #5feb99;
    color: black;
}
.operator {
    background-color: #f3349d;
}
.AC {
    background-color: #f35a34;
}
.backspace {
    background-color:  #474747;
}
.equal {
    background-color: #474747;
}
.disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

